--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@electron-forge/cli": "^6.4.2",
     "@electron-forge/maker-snap": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/publisher-github": "^6.4.2",
     "electron": "^26.2.2"
   }
 }
